mds: md_log_replay thread blocks waiting to be woken up

Fixes: https://tracker.ceph.com/issues/57764
Signed-off-by: zhikuodu <duzhk@qq.com>